# gabber

./: .gitignore  .secret  .secret.example  .secret.ignore  LICENSE.md  LICENSE_EE.md  Makefile  README-Gabber-Component.md  README.md  docker-compose.yml  example-usage.tsx  gabber-nextjs-component.tsx  mcp.yaml  package-gabber-component.json  package-lock.json
engine/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
engine/.gabber/repository/app/: 2fcf6281-c8ba-471d-8cf7-b04bc48148b2.json
engine/data/example/: 1._Echo_(Start Here).json  2._Simple_Voice_AI_w_Subgraph.json  26f23d18-3565-4f3c-8edc-d9f9fa88ca10.json  3._simple_voice_ai_(no_subgraph).json  4._Conversation_w_Video.json  5._Vision-based_Tool_Calls.json  5491420d-9012-4cbf-a4f3-b99f8bb7b5a9.json  581e0983-6ed9-4d92-b129-312623ae63ec.json  7. Push_Up_Counter.json  8._Learning_Assistant.json  83582818-fb30-48c4-a911-9fb7c5e937c7.json  8d404d2f-4b31-4068-a029-f7a3e0e320b9.json  9._Voice_Agent_w_Tool_Calls_And_Dynamic_Prompts.json  e329d0e7-56f7-4f7c-8719-cef410b2f7fd.json  echo.json  fb62c82f-1cd7-4930-a6c6-097ee13ef7e6.json  local-conversational.json  local-tts.json  no-response-ai.json  services-conversational.json  tool-calling-example.json
engine/data/sub_graph/: 25a0bc5f-8c68-49e9-b8c3-c43e4c0d0cea.json  66ce7ccb-1832-425d-99f8-439ea5a310c6 duplicate.json  conversational-local-llm.json  conversational-services.json  conversational_local_llm.json  e05a46f6-676d-4773-b1cf-32439c0b95ff.json
engine/gabber/: __init__.py  main.py
engine/gabber/core/: __init__.py
engine/gabber/core/editor/: messages.py  models.py  serialize.py
engine/gabber/core/graph/: __init__.py  graph.py  graph_library.py  runtime_api.py
engine/gabber/core/logger/: __init__.py  logger.py
engine/gabber/core/mcp/: __init__.py
engine/gabber/core/node/: __init__.py  node.py
engine/gabber/core/pad/: __init__.py  pad.py  property_sink_pad.py  property_source_pad.py  proxy_property_sink_pad.py  proxy_property_source_pad.py  proxy_stateless_sink_pad.py  proxy_stateless_source_pad.py  request_context.py  stateless_sink_pad.py  stateless_source_pad.py
engine/gabber/core/runtime_types/: __init__.py  types.py
engine/gabber/core/secret/: secret_provider.py
engine/gabber/core/types/: __init__.py  client.py  mapper.py  pad_constraints.py  runtime.py
engine/gabber/lib/audio/: __init__.py
engine/gabber/lib/llm/: __init__.py  llm.py  token_estimator.py
engine/gabber/lib/stt/: __init__.py  stt.py
engine/gabber/lib/tts/: __init__.py  cartesia_tts.py  elevenlabs_tts.py  gabber_tts.py  minimax_tts.py  noop_tts.py  openai_tts.py  tts.py
engine/gabber/lib/video/: __init__.py  mp4_encoder.py
engine/gabber/nodes/: __init__.py
engine/gabber/nodes/core/: __init__.py
engine/gabber/nodes/llm/: __init__.py  base_llm.py  llm_context.py  llm_context_2.py  openai_compatible_llm.py
engine/gabber/nodes/local/: __init__.py  kitten_tts.py  local_llm.py  local_stt.py  local_viseme.py
engine/gabber/nodes/stt/: __init__.py  multi_participant_stt.py  stt.py
engine/gabber/nodes/tts/: tts.py
engine/gabber/services/: __init__.py  default_graph_library.py  default_secret_provider.py  editor.py  engine.py
engine/gabber/services/repository/: __init__.py  messages.py  models.py  repository.py
engine/gabber/utils/: __init__.py
engine/src/: main.py
engine/src/core/: __init__.py
engine/src/core/editor/: __init__.py  messages.py  models.py  serialize.py
engine/src/core/graph/: __init__.py  graph.py  runtime_api.py
engine/src/core/mcp/: __init__.py  datachannel_transport.py  mcp_server_config.py  mcp_server_provider.py
engine/src/core/node/: __init__.py  node.py
engine/src/core/pad/: __init__.py  pad.py  property_sink_pad.py  property_source_pad.py  proxy_property_sink_pad.py  proxy_property_source_pad.py  proxy_stateless_sink_pad.py  proxy_stateless_source_pad.py  request_context.py  stateless_sink_pad.py  stateless_source_pad.py  types.py
engine/src/core/runtime_types/: types.py
engine/src/core/secret/: __init__.py  secret_provider.py
engine/src/lib/: __init__.py
engine/src/lib/llm/: llm.py
engine/src/lib/stt/: __init__.py  stt.py
engine/src/lib/tts/: __init__.py  cartesia_tts.py  elevenlabs_tts.py  gabber_tts.py
engine/src/lib/video/: __init__.py  mp4_encoder.py
engine/src/nodes/: __init__.py
engine/src/nodes/core/: __init__.py
engine/src/nodes/llm/: __init__.py  base_llm.py  llm_context.py  openai_compatible_llm.py
engine/src/nodes/local/: __init__.py  canary_stt.py  kitten_tts.py  local_llm.py  local_openai_compatible_llm.py  qwen_omni_llm.py
engine/src/nodes/stt/: __init__.py  multi_participant_stt.py  stt.py
engine/src/nodes/tts/: __init__.py  tts.py
engine/src/nodes/vlm/: __init__.py  vlm.py
engine/src/server/: default_graph_library.py  default_mcp_server_provider.py  default_secret_provider.py  editor.py  engine.py
engine/src/server/repository/: __init__.py  messages.py  models.py  repository.py
engine/src/services/: __init__.py  default_mcp_server_provider.py  editor.py  engine.py  mcp_proxy_client.py
engine/src/services/repository/: repository.py
engine/src/utils/: __init__.py
mcp_computer_use_server/: .gitignore  pyproject.toml
mcp_computer_use_server/src/: main.py
mcp_proxy_client/: .gitignore  README.md  mcp.example.yaml  pyproject.toml
mcp_proxy_client/src/: app.py  main.py
mcp_proxy_client/src/connection/: __init__.py  connection_provider.py  local_connection_provider.py
mcp_proxy_client/src/mcp_proxy/: __init__.py  datachannel_transport.py  mcp_proxy.py  mcp_server_config.py  mcp_server_provider.py  sse_proxy.py
services/gabber-stt/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
services/gabber-stt/src/: main.py  model.py  n.py  scratch.py  scratch_2.py  session.py  test_audio_window.py  test_canary.py  test_client.py  test_openlipsync.py  test_parakeet.py
services/gabber-stt/src/core/: __init__.py  audio_inference.py  audio_window.py
services/gabber-stt/src/engine/: __init__.py  engine.py  lipsync_state.py  stt_state.py
(+390 files in other folders)
