[project]
name = "gabber-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.2"

# Core dependencies needed by both modes
dependencies = [
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
    "python-json-logger==2.0.7",
    "urllib3 >= 1.25.3, < 3.0.0",
    "python_dateutil >= 2.8.2",
    "aiohttp >= 3.8.4",
    "aiohttp-retry >= 2.8.3",
    "json-repair~=0.47.4",
    "pydantic-to-typescript",
    "click",
    "livekit-agents~=1.0.23",
    "livekit~=1.0.11",
    "opencv-python~=4.12.0",
    "nltk",
    "posthog",
    "numpy",
    "onnxruntime >= 1.17.1",
    "jiwer~=3.0",
    "elevenlabs==1.12.1",
    "pyvips~=2.0.2",
    "av~=14.4.0",
    "openai~=1.93.0",
    "pillow~=11.1.0",
    "msgpack~=1.1.1",
    "python-dotenv~=1.1.1",
    "aiofiles~=24.1.0",
]
